--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./node_modules/typescript-eslint-prettier-config/tsconfig.json",
   "compilerOptions": {
     "target": "es5",
     "lib": [
