--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,10 @@
 {
     "root": true,
     "extends": [
-        "./node_modules/typescript-eslint-prettier-config/.eslintrc"
+        "./node_modules/typescript-eslint-prettier-config/.eslintrc",
+        "prettier"
     ],
+    "plugins": ["prettier"],
     "parserOptions": {
         "project": ["./tsconfig.json"]
     }
