--- a/.eslintrc
+++ b/.eslintrc
@@ -7,5 +7,20 @@
     "plugins": ["prettier"],
     "parserOptions": {
         "project": ["./tsconfig.json"]
+    },
+    "rules": {
+        "import/extensions": "off",
+        "camelcase": "off",
+        "no-underscore-dangle": "off",
+        "max-len": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
+        "import/prefer-default-export": "warn",
+        "@typescript-eslint/no-unsafe-assignment": "warn",
+        "@typescript-eslint/no-unsafe-return": "warn",
+        "@typescript-eslint/consistent-type-definitions": "off",
+        "@typescript-eslint/restrict-template-expressions": "warn",
+        "no-use-before-define": "warn",
+        "@typescript-eslint/no-unsafe-argument": "warn",
+        "@typescript-eslint/no-unsafe-call": "warn"
     }
 }
