--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
+    "@types/node": "^17.0.29",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
@@ -17,8 +19,10 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start:client": "react-scripts start",
+    "start:server": "ts-node-dev src/server/index.ts",
+    "start": "run-p -ls start:*",
+    "build": "tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "tsc --watch",
@@ -47,6 +51,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.14.0",
@@ -56,7 +61,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
+    "ts-node-dev": "^1.1.8",
     "typescript-eslint-prettier-config": "^1.3.3"
   },
   "husky": {
