--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,11 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
+    "noPropertyAccessFromIndexSignature": false,
     "noEmit": true,
     "jsx": "react-jsx"
   },
