--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:8001",
   "dependencies": {
+    "json-server": "^0.17.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -53,6 +54,7 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/express": "^4.17.13",
+    "@types/json-server": "^0.14.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.14.0",
@@ -61,7 +63,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "json-server": "^0.17.0",
     "lint-staged": "^12.4.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
