--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,7 @@
         "no-underscore-dangle": "off",
         "max-len": "off",
         "@typescript-eslint/ban-ts-comment": "off",
-        "import/prefer-default-export": "warn",
+        "import/prefer-default-export": "off",
         "@typescript-eslint/no-unsafe-assignment": "warn",
         "@typescript-eslint/no-unsafe-return": "warn",
         "@typescript-eslint/consistent-type-definitions": "off",
