--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "proxy": "http://localhost:8001",
   "dependencies": {
-    "json-server": "^0.17.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -14,6 +13,8 @@
     "@types/react-dom": "^18.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "json-server": "^0.17.0",
+    "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
