--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,9 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "es5"
+    "target": "es5",
+    "types": ["cypress", "@testing-library/cypress"]
   },
-  "include": ["src"],
+  "include": ["src", "cypress"],
   "exclude": [".prettierrc.ts", "node_modules"]
 }
