--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14
-      - name: Run Format (Prettier)
+      - name: Run Format
         run: |
           yarn install
           yarn format:check
