--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: lint
+name: test
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - synchronize
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14
-      - name: Run Linter (ESLint)
+      - name: Run Test
         run: |
           yarn install
           yarn test
