--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Run Test
         run: |
           yarn install
-          yarn test
+          yarn test --watchAll=false
           yarn cypress run
