--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,6 @@ jobs:
       - name: Run Test
         run: |
           yarn install --frozen-lockfile
+          yarn start
           yarn test --watchAll=false
           yarn cypress run
