test: Add Tests (#7)
* test: rtl

* feat: test workflow

* fix: test

* test: cypress

* fix: workflows

* fix: command

* fix: command

* fix: no ref

* fix: start app

* fix: seperate steps

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: lint
+name: test
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - synchronize
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -20,7 +20,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14
-      - name: Run Linter
-        run: |
-          yarn install
-          yarn lint
+      - run: |
+          yarn install --frozen-lockfile
+          yarn start &
+      - run: |
+          yarn test --watchAll=false
+      - run: |
+          yarn cypress run
