--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -16,12 +16,11 @@ jobs:
         uses: actions/checkout@v2.4.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          ref: main
       - name: Use Node.js 14
         uses: actions/setup-node@v2
         with:
           node-version: 14
-      - name: Run Format (Prettier)
+      - name: Run Format
         run: |
           yarn install
           yarn format:check
